JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre12

Thanks to Thomas Alspaugh for contributing to this release.

{{{ Miscellaneous Changes

- Updated BibTeX and LaTeX syntax highlighting (Thomas Alspaugh).

- The Buffer Options and Global Options->Editing panes no longer allow
  setting the wrap mode to 'soft' with a wrap margin of zero.

}}}
{{{ Bug Fixes

- Fixed a possible deadlock on startup when loading the SQL plugin. In
  fact this would happen with any plugin that attempted to load icons
  from its class initializer.

- Fixed NullPointerException when unloading a plugin which has at least
  one floating window that is not docked.

- Fixed problems immediately after changing the font size due to a
  missing recalculateLastPhysicalLine() call.

- Fixed NullPointerException in PluginJAR on startup if settings
  directory can not be written to.

- File->Save All would ask for confirmation even if "Confirm Save All
  Buffers" was switched off.

- Fixed off-by-one error in Edit->Word Count if the selection ended with
  whitespace.

- Text area's horizontal scroll did not update when the text area was
  resized.

- jEdit.getActiveView() would return null if the current view was
  closed, and another view was not focused. This would break the
  edit server if -reuseview was specified.

- Fixed NullPointerException from syntax highlighting code when buffer
  switching APIs were called in a certain sequence.

- Fixed exception when clicking in one-line-high text area.

}}}

}}}

{{{ Version 4.2pre11

This release fixes a show-stopper bug in pre10. The JAR file included in
the installer was not completely up-to-date, and it had a property file
lossage bug.

Note that if you compiled from source, you will not see this problem.

}}}

{{{ Version 4.2pre10

Thanks to Barry Carr, Brad Mace, Ken Turner, Nahuel Foronda,
Ollie Rutherfurd, Trevor Harmon and Thomas Galvin for contributing to
this release.

{{{ Miscellaneous
